--- a/students/veronica-bustabad.html
+++ b/students/veronica-bustabad.html
@@ -36,7 +36,7 @@
               <h3>Biography</h3>
             </div>
             <div class="description-holder">
-              <p>I grew up outside of the Washington DC (NoVA!) and went to college at Carnegie Mellon University in Pittsburgh. After college, I worked as an Oracle consultant for IBM for a bit and now I teach here at The Flatiron School.</p>
+              <p>I am a Miami native and studied college at Duke University. After college, I worked in Sales and Marketing. I am studying at the Flatiron School and would like to work for a top company within the technology industry.</p>
             </div>
           </div>
         </div>
@@ -46,8 +46,8 @@
               <h3>Education</h3>
             </div>
             <div class="description-holder">
-              <h4>Carnegie Mellon University</h4>
-              <h5>Bachelor of Science in Information Systems and Economics</h5>
+              <h4>Duke University</h4>
+              <h5>Bachelor of Arts in Political Science and Government</h5>
             </div>
           </div>
         </div>
@@ -57,12 +57,12 @@
               <h3>Experience</h3>
             </div>
             <div class="description-holder">
-              <h4>The Flatiron School</h4>
-              <h5>Lead iOS Instructor</h5>
+              <h4>Royal Caribbean</h4>
+              <h5>Corporate Guest Relations Advocate</h5>
             </div>
             <div class="description-holder">
-              <h4>IBM</h4>
-              <h5>Consultant</h5>
+              <h4>Goldin Solar, LLC</h4>
+              <h5>Sales and Marketing Associate</h5>
             </div>
           </div>
         </div>
